Fixed Alignment Styling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -271,7 +271,12 @@ h3 {
   margin-top: auto;
 }
 
-.form
+.form{
+  width: 80%;
+  color: #000;
+  margin: 0 auto;
+}
+
 .content {
   width: 80%;
   color: #000;
